[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipg"
version = "0.1.0"
description = "Python SDK for AI Power Grid — free, decentralized, OpenAI-compatible AI inference."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AI Power Grid" }]
keywords = ["ai", "llm", "inference", "openai", "decentralized", "aipg"]
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "respx", "httpx"]

[project.urls]
Homepage = "https://aipowergrid.io"
Documentation = "https://aipowergrid.io/docs"
Repository = "https://github.com/AIPowerGrid/aipg-sdk-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
